syntax = "proto3";

package proto;

// rank service definition
service RankingService {
	rpc RankChange(Ranking.Change) returns (Ranking.NullResult);	// 排名变动
	rpc QueryRankRange(Ranking.Range) returns (Ranking.RankList); // 范围查询
	rpc QueryUsers(Ranking.Users) returns (Ranking.UserList);  // 查询某些ID的排名
}

message Ranking { 
	message Change{
		int32 user_id =1;
		int32 score =2;
	}

	message NullResult {
	}

	message Range {
		int32 start_no=1;
		int32 end_no=2;
	}

	message RankList {
		repeated int32 user_ids=1 [packed=true];
		repeated int32 scores=2 [packed=true];
	}

	message Users{
		repeated int32 user_ids =1 [packed=true];
	}

	message UserList {
		repeated int32 ranks =1 [packed=true];
		repeated int32 scores =2 [packed=true];
	}
}
